# agenttest

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  agenttest.toml  pyproject.toml
.github/workflows/: agenttest.yml  publish.yml
agenttest/: __init__.py  __main__.py  assertions.py  cli.py  config.py  judge.py  providers.py  record.py  reporter.py  runner.py
tests/: __init__.py  agent_test_example.py  test_runner.py
